Finalized v0.5